Cambios en el texto

--- a/index.html
+++ b/index.html
@@ -70,43 +70,31 @@
           <h3>CUADRÍCULA</h3>
           <hr>
           <p>
-            La cuadrícula de Utuqu está construida en base a 12 columnas que ocupan espacios equivalentes en un lienzo de 1200px de anchura y es <i>mobile-first</i>, lo que quiere decir que los estilos se heredan "hacia arriba".
+            La cuadrícula de Utuqu tiene 12 columnas que ocupan espacios
+            equivalentes en un lienzo de 1200px de anchura y se apilan una sobre
+            otra en pantallas estrechas.
           </p>
           <p>
-            Usa la clase <code>.fila</code> para crear una division horizontal y anida tantas <code>.peque-*</code> como columnas necesites. Agrega <code>.medio-*</code> o <code>.grande-*</code> para definir el tamaño en pantallas de mayores dimensiones.
+            La clase <code>.fila</code> crea una division horizontal y puedes
+            poner dentro tantos elementos <code>.medio-*</code> como columnas necesites.
+            Usa <code>.peque-*</code> o <code>.grande-*</code> para definir
+            diferentes distrubuciones en cada resolucion de pantalla.
           </p>
         </div>
 
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-1"><span class="muestra-columna">.medio-1</span></div>
-        <div class="peque-12 medio-2"><span class="muestra-columna">.medio-2</span></div>
-        <div class="peque-12 medio-2"><span class="muestra-columna">.medio-2</span></div>
-        <div class="peque-12 medio-2"><span class="muestra-columna">.medio-2</span></div>
-        <div class="peque-12 medio-2"><span class="muestra-columna">.medio-2</span></div>
-        <div class="peque-12 medio-2"><span class="muestra-columna">.medio-2</span></div>
-        <div class="peque-12 medio-2"><span class="muestra-columna">.medio-2</span></div>
-        <div class="peque-12 medio-3"><span class="muestra-columna">.medio-3</span></div>
-        <div class="peque-12 medio-3"><span class="muestra-columna">.medio-3</span></div>
-        <div class="peque-12 medio-3"><span class="muestra-columna">.medio-3</span></div>
-        <div class="peque-12 medio-3"><span class="muestra-columna">.medio-3</span></div>
-        <div class="peque-12 medio-4"><span class="muestra-columna">.medio-4</span></div>
-        <div class="peque-12 medio-4"><span class="muestra-columna">.medio-4</span></div>
-        <div class="peque-12 medio-4"><span class="muestra-columna">.medio-4</span></div>
-        <div class="peque-12 medio-5"><span class="muestra-columna">.medio-5</span></div>
-        <div class="peque-12 medio-2"><span class="muestra-columna">.medio-2</span></div>
-        <div class="peque-12 medio-5"><span class="muestra-columna">.medio-5</span></div>
-        <div class="peque-12 medio-6"><span class="muestra-columna">.medio-6</span></div>
-        <div class="peque-12 medio-6"><span class="muestra-columna">.medio-6</span></div>
+        <div class="peque-12"><span class="muestra-columna">.peque-12</span></div>
+        <div class="medio-1"><span class="muestra-columna">.medio-1</span></div>
+        <div class="medio-11"><span class="muestra-columna">.medio-11</span></div>
+        <div class="medio-2"><span class="muestra-columna">.medio-2</span></div>
+        <div class="medio-10"><span class="muestra-columna">.medio-10</span></div>
+        <div class="medio-3"><span class="muestra-columna">.medio-3</span></div>
+        <div class="medio-9"><span class="muestra-columna">.medio-9</span></div>
+        <div class="medio-4"><span class="muestra-columna">.medio-4</span></div>
+        <div class="medio-8"><span class="muestra-columna">.medio-8</span></div>
+        <div class="medio-5"><span class="muestra-columna">.medio-5</span></div>
+        <div class="medio-7"><span class="muestra-columna">.medio-7</span></div>
+        <div class="medio-6"><span class="muestra-columna">.medio-6</span></div>
+        <div class="medio-6"><span class="muestra-columna">.medio-6</span></div>
 
         <!-- Código -->
         <div class="peque-12">
